Add flipping animation

--- a/cards/index.html
+++ b/cards/index.html
@@ -6,34 +6,35 @@
 
     <link rel="stylesheet" href="css/master.css" media="all" />
 
-    <script src="js/jquery-1.4.2.min.js"></script>
-    <script src="js/main.js"></script>
   </head>
   <body>
     <h1>Helveticards</h1>
 
     <div id="table">
       <div id="cards">
-        <div class="card two">
-          <div class="front">
-            <div class="corner top">
-              <span class="number">2</span>
-              <span>]</span>
+
+
+        <!-- NEW FLIPPABLE CARD. Add the `flipped` class to flip -->s
+        <div class="card_container">
+          <div class="card two">
+            <div class="front">
+              <div class="corner top">
+                <span class="number">2</span>
+                <span>]</span>
+              </div>
+
+              <span class="suit top_center">]</span>
+              <span class="suit bottom_center">]</span>
+
+              <div class="corner bottom">
+                <span class="number">2</span>
+                <span>]</span>
+              </div>
             </div>
-
-            <span class="suit top_center">]</span>
-            <span class="suit bottom_center">]</span>
-
-            <div class="corner bottom">
-              <span class="number">2</span>
-              <span>]</span>
-            </div>
-          </div>
-
-          <div class="back">
-
+            <div class="back"></div>
           </div>
         </div>
+        <!--  -->
 
         <div class="card three">
           <div class="corner top">
