--- a/cards/index.html
+++ b/cards/index.html
@@ -15,7 +15,7 @@
 
     <!-- All of the cards -->
     <div class="card_container">
-      <div class="card two">
+      <div class="card c-2">
         <div class="front">
           <div class="corner top">
             <span class="number">2</span>
@@ -36,7 +36,7 @@
 
 
       <div class="card_container">
-        <div class="card three">
+        <div class="card c-3">
         <div class="front">
           <div class="corner top">
             <span class="number">3</span>
@@ -57,7 +57,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card four">
+        <div class="card c-4">
         <div class="front">
           <div class="corner top">
             <span class="number">4</span>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card five">
+        <div class="card c-5">
         <div class="front">
           <div class="corner top">
             <span class="number">5</span>
@@ -102,7 +102,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card six">
+        <div class="card c-6">
         <div class="front">
           <div class="corner top">
             <span class="number">6</span>
@@ -126,7 +126,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card seven">
+        <div class="card c-7">
         <div class="front">
           <div class="corner top">
             <span class="number">7</span>
@@ -151,7 +151,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card eight">
+        <div class="card c-8">
         <div class="front">
           <div class="corner top">
             <span class="number">8</span>
@@ -177,7 +177,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card nine">
+        <div class="card c-9">
         <div class="front">
           <div class="corner top">
             <span class="number">9</span>
@@ -205,7 +205,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card ten">
+        <div class="card c-0">
         <div class="front">
           <div class="corner top">
             <span class="number">10</span>
@@ -234,7 +234,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card jack">
+        <div class="card c-j">
         <div class="front">
           <div class="corner top">
             <span class="number">J</span>
@@ -253,7 +253,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card queen">
+        <div class="card c-q">
         <div class="front">
           <div class="corner top">
             <span class="number">Q</span>
@@ -272,7 +272,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card king">
+        <div class="card c-k">
         <div class="front">
           <div class="corner top">
             <span class="number">K</span>
@@ -291,7 +291,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card ace">
+        <div class="card c-a">
         <div class="front">
           <div class="corner top">
             <span class="number">A</span>
@@ -310,7 +310,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond two">
+        <div class="card d-2">
         <div class="front">
           <div class="corner top">
             <span class="number">2</span>
@@ -330,7 +330,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond three">
+        <div class="card d-3">
         <div class="front">
           <div class="corner top">
             <span class="number">3</span>
@@ -351,7 +351,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond four">
+        <div class="card d-4">
         <div class="front">
           <div class="corner top">
             <span class="number">4</span>
@@ -373,7 +373,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond five">
+        <div class="card d-5">
         <div class="front">
           <div class="corner top">
             <span class="number">5</span>
@@ -396,7 +396,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond six">
+        <div class="card d-6">
         <div class="front">
           <div class="corner top">
             <span class="number">6</span>
@@ -420,7 +420,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond seven">
+        <div class="card d-7">
         <div class="front">
           <div class="corner top">
             <span class="number">7</span>
@@ -445,7 +445,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond eight">
+        <div class="card d-8">
         <div class="front">
           <div class="corner top">
             <span class="number">8</span>
@@ -471,7 +471,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond nine">
+        <div class="card d-9">
         <div class="front">
           <div class="corner top">
             <span class="number">9</span>
@@ -499,7 +499,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond ten">
+        <div class="card d-0">
         <div class="front">
           <div class="corner top">
             <span class="number">10</span>
@@ -528,7 +528,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond jack">
+        <div class="card d-j">
         <div class="front">
           <div class="corner top">
             <span class="number">J</span>
@@ -547,7 +547,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond queen">
+        <div class="card d-q">
         <div class="front">
           <div class="corner top">
             <span class="number">Q</span>
@@ -566,7 +566,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond king">
+        <div class="card d-k">
         <div class="front">
           <div class="corner top">
             <span class="number">K</span>
@@ -585,7 +585,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card diamond ace">
+        <div class="card d-a">
         <div class="front">
           <div class="corner top">
             <span class="number">A</span>
@@ -604,7 +604,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card two">
+        <div class="card s-2">
         <div class="front">
           <div class="corner top">
             <span class="number">2</span>
@@ -625,7 +625,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card three">
+        <div class="card s-3">
         <div class="front">
           <div class="corner top">
             <span class="number">3</span>
@@ -646,7 +646,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card four">
+        <div class="card s-4">
         <div class="front">
           <div class="corner top">
             <span class="number">4</span>
@@ -668,7 +668,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card five">
+        <div class="card s-5">
         <div class="front">
           <div class="corner top">
             <span class="number">5</span>
@@ -691,7 +691,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card six">
+        <div class="card s-6">
         <div class="front">
           <div class="corner top">
             <span class="number">6</span>
@@ -715,7 +715,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card seven">
+        <div class="card s-7">
         <div class="front">
           <div class="corner top">
             <span class="number">7</span>
@@ -740,7 +740,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card eight">
+        <div class="card s-8">
         <div class="front">
           <div class="corner top">
             <span class="number">8</span>
@@ -766,7 +766,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card nine">
+        <div class="card s-9">
         <div class="front">
           <div class="corner top">
             <span class="number">9</span>
@@ -794,7 +794,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card ten">
+        <div class="card s-0">
         <div class="front">
           <div class="corner top">
             <span class="number">10</span>
@@ -823,7 +823,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card jack">
+        <div class="card s-j">
         <div class="front">
           <div class="corner top">
             <span class="number">J</span>
@@ -842,7 +842,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card queen">
+        <div class="card s-q">
         <div class="front">
           <div class="corner top">
             <span class="number">Q</span>
@@ -861,7 +861,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card king">
+        <div class="card s-k">
         <div class="front">
           <div class="corner top">
             <span class="number">K</span>
@@ -880,7 +880,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card ace">
+        <div class="card s-a">
         <div class="front">
           <div class="corner top">
             <span class="number">A</span>
@@ -899,7 +899,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart two">
+        <div class="card h-2">
         <div class="front">
           <div class="corner top">
             <span class="number">2</span>
@@ -919,7 +919,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart three">
+        <div class="card h-3">
         <div class="front">
           <div class="corner top">
             <span class="number">3</span>
@@ -940,7 +940,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart four">
+        <div class="card h-4">
         <div class="front">
           <div class="corner top">
             <span class="number">4</span>
@@ -962,7 +962,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart five">
+        <div class="card h-5">
         <div class="front">
           <div class="corner top">
             <span class="number">5</span>
@@ -985,7 +985,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart six">
+        <div class="card h-6">
         <div class="front">
           <div class="corner top">
             <span class="number">6</span>
@@ -1009,7 +1009,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart seven">
+        <div class="card h-7">
         <div class="front">
           <div class="corner top">
             <span class="number">7</span>
@@ -1034,7 +1034,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart eight">
+        <div class="card h-8">
         <div class="front">
           <div class="corner top">
             <span class="number">8</span>
@@ -1060,7 +1060,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart nine">
+        <div class="card h-9">
         <div class="front">
           <div class="corner top">
             <span class="number">9</span>
@@ -1088,7 +1088,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart ten">
+        <div class="card h-0">
         <div class="front">
           <div class="corner top">
             <span class="number">10</span>
@@ -1117,7 +1117,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart jack">
+        <div class="card h-j">
         <div class="front">
           <div class="corner top">
             <span class="number">J</span>
@@ -1136,7 +1136,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart queen">
+        <div class="card h-q">
         <div class="front">
           <div class="corner top">
             <span class="number">Q</span>
@@ -1155,7 +1155,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart king">
+        <div class="card h-k">
         <div class="front">
           <div class="corner top">
             <span class="number">K</span>
@@ -1174,7 +1174,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card heart ace">
+        <div class="card h-a">
         <div class="front">
           <div class="corner top">
             <span class="number">A</span>
@@ -1195,8 +1195,11 @@
     <script src="js/async.js"></script>
     <script src="js/move.js"></script>
     <script src="js/display.js"></script>
+    <script src="../lib/game/events.js"></script>
+    <script src="../lib/game/util.js"></script>
     <script src="../lib/game/deck.js"></script>
     <script src="../lib/game/player.js"></script>
     <script src="../lib/game/game.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
