--- a/cards/index.html
+++ b/cards/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
 
+
+    <div id="player0"></div>
+    <div id="player1"></div>
+    <div id="player2"></div>
+    <div id="player3"></div>
+
     <div id="board"></div>
 
 
@@ -1191,7 +1197,7 @@
           <div class="back"></div>
         </div>
       </div>
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="js/async.js"></script>
     <script src="js/move.js"></script>
     <script src="js/display.js"></script>
