--- a/cards/index.html
+++ b/cards/index.html
@@ -10,10 +10,10 @@
   <body>
 
 
-    <div id="player0"></div>
-    <div id="player1"></div>
-    <div id="player2"></div>
-    <div id="player3"></div>
+    <div class="player0" id="player0"></div>
+    <div class="player1" id="player1"></div>
+    <div class="player2" id="player2"></div>
+    <div class="player3" id="player3"></div>
 
     <div id="board"></div>
 
