--- a/cards/index.html
+++ b/cards/index.html
@@ -1201,6 +1201,7 @@
     <script src="js/async.js"></script>
     <script src="js/move.js"></script>
     <script src="js/display.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="../lib/game/events.js"></script>
     <script src="../lib/game/util.js"></script>
     <script src="../lib/game/deck.js"></script>
