fix diamond and heart css

--- a/cards/index.html
+++ b/cards/index.html
@@ -316,7 +316,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-2">
+        <div class="card diamond d-2">
         <div class="front">
           <div class="corner top">
             <span class="number">2</span>
@@ -336,7 +336,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-3">
+        <div class="card diamond d-3">
         <div class="front">
           <div class="corner top">
             <span class="number">3</span>
@@ -357,7 +357,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-4">
+        <div class="card diamond d-4">
         <div class="front">
           <div class="corner top">
             <span class="number">4</span>
@@ -379,7 +379,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-5">
+        <div class="card diamond d-5">
         <div class="front">
           <div class="corner top">
             <span class="number">5</span>
@@ -402,7 +402,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-6">
+        <div class="card diamond d-6">
         <div class="front">
           <div class="corner top">
             <span class="number">6</span>
@@ -426,7 +426,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-7">
+        <div class="card diamond d-7">
         <div class="front">
           <div class="corner top">
             <span class="number">7</span>
@@ -451,7 +451,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-8">
+        <div class="card diamond d-8">
         <div class="front">
           <div class="corner top">
             <span class="number">8</span>
@@ -477,7 +477,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-9">
+        <div class="card diamond d-9">
         <div class="front">
           <div class="corner top">
             <span class="number">9</span>
@@ -505,7 +505,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-0">
+        <div class="card diamond d-0">
         <div class="front">
           <div class="corner top">
             <span class="number">10</span>
@@ -534,7 +534,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-j">
+        <div class="card diamond d-j">
         <div class="front">
           <div class="corner top">
             <span class="number">J</span>
@@ -553,7 +553,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-q">
+        <div class="card diamond d-q">
         <div class="front">
           <div class="corner top">
             <span class="number">Q</span>
@@ -572,7 +572,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-k">
+        <div class="card diamond d-k">
         <div class="front">
           <div class="corner top">
             <span class="number">K</span>
@@ -591,7 +591,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card d-a">
+        <div class="card diamond d-a">
         <div class="front">
           <div class="corner top">
             <span class="number">A</span>
@@ -905,7 +905,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-2">
+        <div class="card heart h-2">
         <div class="front">
           <div class="corner top">
             <span class="number">2</span>
@@ -925,7 +925,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-3">
+        <div class="card heart h-3">
         <div class="front">
           <div class="corner top">
             <span class="number">3</span>
@@ -946,7 +946,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-4">
+        <div class="card heart h-4">
         <div class="front">
           <div class="corner top">
             <span class="number">4</span>
@@ -968,7 +968,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-5">
+        <div class="card heart h-5">
         <div class="front">
           <div class="corner top">
             <span class="number">5</span>
@@ -991,7 +991,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-6">
+        <div class="card heart h-6">
         <div class="front">
           <div class="corner top">
             <span class="number">6</span>
@@ -1015,7 +1015,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-7">
+        <div class="card heart h-7">
         <div class="front">
           <div class="corner top">
             <span class="number">7</span>
@@ -1040,7 +1040,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-8">
+        <div class="card heart h-8">
         <div class="front">
           <div class="corner top">
             <span class="number">8</span>
@@ -1066,7 +1066,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-9">
+        <div class="card heart h-9">
         <div class="front">
           <div class="corner top">
             <span class="number">9</span>
@@ -1094,7 +1094,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-0">
+        <div class="card heart h-0">
         <div class="front">
           <div class="corner top">
             <span class="number">10</span>
@@ -1123,7 +1123,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-j">
+        <div class="card heart h-j">
         <div class="front">
           <div class="corner top">
             <span class="number">J</span>
@@ -1142,7 +1142,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-q">
+        <div class="card heart h-q">
         <div class="front">
           <div class="corner top">
             <span class="number">Q</span>
@@ -1161,7 +1161,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-k">
+        <div class="card heart h-k">
         <div class="front">
           <div class="corner top">
             <span class="number">K</span>
@@ -1180,7 +1180,7 @@
       </div>
 
       <div class="card_container">
-        <div class="card h-a">
+        <div class="card heart h-a">
         <div class="front">
           <div class="corner top">
             <span class="number">A</span>
