--- a/cards/index.html
+++ b/cards/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Helveticards - 100% CSS playing cards</title>
+    <title>Anchorage</title>
 
     <link rel="stylesheet" href="css/master.css" media="all" />
 
