--- a/cards/index.html
+++ b/cards/index.html
@@ -1213,14 +1213,14 @@
         </div>
       </div>
     <script src="js/jquery.min.js"></script>
-    <script src="../lib/game/events.js"></script>
-    <script src="../lib/game/util.js"></script>
+    <script src="js/game/events.js"></script>
+    <script src="js/game/util.js"></script>
     <script src="js/async.js"></script>
     <script src="js/move.js"></script>
     <script src="js/display.js"></script>
-    <script src="../lib/game/deck.js"></script>
-    <script src="../lib/game/player.js"></script>
-    <script src="../lib/game/game.js"></script>
+    <script src="js/game/deck.js"></script>
+    <script src="js/game/player.js"></script>
+    <script src="js/game/game.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
